# services/backend-kotlin/core-stuff/src/main/kotlin/com/tsypk/corestuff/controller/dto/notification/NotificationSubscriptionDto.kt
@@ -1,0 +1,11 @@
+package com.tsypk.corestuff.controller.dto.notification
+
+import com.fasterxml.jackson.annotation.JsonProperty
+import com.tsypk.corestuff.model.notification.NotificationType
+
+data class NotificationSubscriptionDto(
+    @JsonProperty(value = "model_id")
+    val modelId: String,
+    @JsonProperty(value = "type")
+    val type: NotificationType,
+)
