# services/backend-kotlin/core-stuff/src/main/kotlin/com/tsypk/corestuff/model/notification/NotificationSubscription.kt
@@ -1,8 +1,17 @@
 package com.tsypk.corestuff.model.notification
 
+import com.tsypk.corestuff.controller.dto.notification.NotificationSubscriptionDto
+
 data class NotificationSubscription(
     val id: Long = 0L,
     val userId: Long,
     val entityId: String,
     val type: NotificationType,
-)
+) {
+    fun toDto(): NotificationSubscriptionDto {
+        return NotificationSubscriptionDto(
+            modelId = entityId,
+            type = type,
+        )
+    }
+}
